test/TestSuite/Syntax/Errors/alloc_select_mode.tjp
project test "Test" "1.0" 2007-03-25 +2m

resource r "R"

task t "T" {
# MARK: error 7 alloc_select_mode
	allocate r { select foo }
}
